<resources>
    <string name="app_name">Stocks Pokedex</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="iex_base_url_prod">https://cloud.iexapis.com/</string>
    <string name="iex_base_url_sandbox">https://sandbox.iexapis.com/</string>
    <string name="rapid_api_token">d5521624a8msh964b295244bd92bp1b86e0jsn6dee14943944</string>
    <string name="iex_api_token">pk_90c746c99d704e4091908a3561fdcd2e</string>
    <string name="iex_api_token_sandbox">Tpk_6a330ff9dc3645e3b97f2fba6cd5b06a</string>

    <string name="iex_version">stable/</string>

    <string name="local_db_name">Stocks Cache</string>

    <string name="google_heb">גוגל</string>
    <string name="google_login">google login</string>
    <string name="login">Login</string>
    <string name="home_page">Main</string>
    <string name="add_stock">Add Stock</string>
    <string name="ticker">Ticker</string>
    <string name="company_name">Company name</string>
    <string name="placeholder">placeholder</string>
    <string name="ceo">CEO</string>
    <string name="news">News</string>
    <string name="_10k">10K</string>
    <string name="conference_call">Conference Call</string>
    <string name="_10q">10Q</string>
    <string name="investors_presentation">Investors Presentation</string>
    <string name="checklist">Checklist</string>
    <string name="show_todo_list">show todo list</string>
    <string name="basic_info">Basic info</string>
    <string name="add_a_bullish_thesis_file">add a bullish thesis file</string>
    <string name="bullish_thesis">Bullish thesis</string>
    <string name="price_target">Price target</string>
    <string name="add_a_dcf_file_button">Add a DCF file button</string>
    <string name="add_a_price_target_file">Add a price target file</string>
    <string name="discounted_cash_flow">Discounted Cash Flow</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="buy">BUY</string>
    <string name="_239">239$</string>
    <string name="ticker_bynd">BYND</string>
    <string name="beyond_meat">Beyond Meat</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="stocks_pokedex">Stocks Pokedex</string>
    <string name="app_icon">app icon</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
</resources>